# radical-ssr

./: .gitignore  Cargo.toml  README.md  package.json  wrangler.toml
benchmark/: add_post.py  benchmark.py  cache_edge_10_trials.csv  cache_local_10_trials.csv  debug_client.py  output_cache_edge.csv  output_cache_local.csv  output_con_edge.txt  output_con_local.txt  output_edge.csv  output_seq_local.txt  post.json
src/: cache.rs  lib.rs
templates/: index.html
