[package]
name = "ssr-bench"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
askama = "0.12.1"
chrono = "0.4.31"
serde = "1.0.193"
serde_derive = "1.0.193"
worker = "0.0.15"

[profile.release]
lto = true
strip = true
codegen-units = 1
